--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <!-- Button to trigger the API request -->
       <div class="flex flex-col items-center">
         <button
-          @click="postData"
+          x-on:click="postData()"
           class="bg-gray-700 text-white p-2 rounded w-32"
         >
           Submit
@@ -129,6 +129,7 @@
     </div>
 
     <script>
+      const calendarData = [];
       function calendar() {
         return {
           selectedYear: 0,
@@ -155,7 +156,7 @@
               1
             ).getDay();
             let week = [];
-            const calendarData = [];
+            
 
             for (let i = 0; i < firstDayOfMonth; i++) {
               week.push("");
@@ -240,12 +241,13 @@
 
       function postData() {
         // Assuming your API endpoint is 'https://example.com/api'
-        fetch("https://example.com/api", {
+        console.log(calendarData)
+        fetch("http://localhost:5000/", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
           },
-          body: JSON.stringify(this.formData),
+          body: JSON.stringify(calendarData),
         })
           .then((response) => response.json())
           .then((data) => {
